--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ name = "rmath"
 version = "0.1.0"
 edition = "2018"
 authors = ["DArbres <paladin100100@gmail.com>"]
+license = "GPL-3.0 License"
+repository = "https://github.com/Trees-D/rmath"
 description = "A simple 3D math library for games and graphics"
 
 [features]
