--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ruby-math"
-version = "0.1.4"
+version = "0.1.5"
 edition = "2018"
 authors = ["DArbres <paladin100100@gmail.com>"]
 license = "GPL-3.0"
@@ -14,3 +14,4 @@ debug-ruby-assert = []
 ruby-assert = []
 
 [dependencies]
+chrono = "0.4.19"
